# jobscraper

./: .gitignore  CODE_REVIEW.md  README.md  config_example.json  config_manager.py  main.py  output.py  pyproject.toml  scraper.py  test_mux.json
.github/: README.md
.github/workflows/: tests.yml
scraper/: __init__.py  constants.py  core.py  url_utils.py
scraper/extractors/: __init__.py  base.py  clicking.py  custom.py  default.py  iframe.py
templates/: job_matches.html
tests/: README.md  __init__.py  conftest.py  test_config_manager.py  test_integration.py  test_main.py  test_output.py  test_scraper.py  test_scraper_async.py
tests/fixtures/: basic_jobs.html  greenhouse_jobs.html  jobs_custom_selectors.html  jobs_with_cookie_banner.html  jobs_with_filters.html  jobs_with_iframe.html  jobs_with_js_navigation.html  jobs_with_load_more.html  jobs_with_pagination.html  jobs_with_pagination_page2.html
tests/fixtures/jobs/: engineering-manager.html  qa-analyst.html  software-dev.html
